# azure-translate-app

./: .env  .gitignore  README.md  app.py  docker-compose.yml  gpt.py  main.py  marian_dockerfile  marian_server.py  pyproject.toml  test.py  web_app_dockerfile
templates/: index.html
utility_classes/: __init__.py  gpt_manager.py  marian_manager.py  tts_manager.py  utility_functions.py
