[project]
name = "azure-translate-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "cmake>=4.0.3",
    "fastapi>=0.115.14",
    "flask>=3.1.1",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.0",
    "torch==2.7.0",
    "transformers>=4.53.0",
    "uvicorn[standard]==0.34.2",
]
